# ros_workspace

./: .gitignore  README.md  baxter.sh
Not For Build/my_code/my_commander/: CMakeLists.txt  package.xml
Not For Build/my_commander/: CMakeLists.txt  package.xml
Not For Build/my_commander/src/: minimal_commander.cpp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  ITBState.h  ITBStates.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  (+3 more)
src/baxter_moveit/: CMakeLists.txt  CMakeLists.txt~
src/baxter_moveit_config/: README.md
src/kinect_pcl_process/: CMakeLists.txt  package.xml
src/map_drawer/: CMakeLists.txt  README.md  package.xml
src/map_drawer/include/slam_gmapping/: slam_gmapping.h
src/map_drawer/launch/: maze_mapping.launch
src/map_drawer/src/: feedback_controllor.cpp  lidar_detector.cpp  pub_des_state.cpp  slam_gmapping.cpp
src/maze_solver/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
src/mobot_simulation/: CMakeLists.txt  README.md  package.xml
src/my_commander/: CMakeLists.txt~  package.xml~
src/my_interesting_moves/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/pcl_recognition/: .gitignore  CMakeLists.txt
src/quat2euler/: CMakeLists.txt  README.md  package.xml
src/rh_action_server/: CMakeLists.txt  README.md  package.xml
src/robot_simulator/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/wall_follower/: CMakeLists.txt  package.xml
(+864 files in other folders)
